--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 tensorflow==1.13.1
 matplotlib==3.0.2
-sklearn
+scikit-learn==0.20.3
 bitarray==1.7.1
 PyYAML==5.1.1
 opencv-python==4.1.0.25
+redis==3.5.3
