--- a/DockerfilePi
+++ b/DockerfilePi
@@ -3,19 +3,21 @@ FROM ubuntu:18.04
 RUN sed -i s@/archive.ubuntu.com/@/mirrors.aliyun.com/@g /etc/apt/sources.list
 RUN apt-get update && apt-get install -y iproute2 stress-ng apt-transport-https vim net-tools \
     ca-certificates curl wget software-properties-common git libgl1-mesa-glx \
-    libcblas-dev libhdf5-dev libhdf5-serial-dev libatlas-base-dev libjasper-dev libqtgui4 libqt4-test \
-    libsm6 libxrender1 libxext-dev cmake
+    libhdf5-dev libhdf5-serial-dev libatlas-base-dev libqtgui4 libqt4-test \
+    libsm6 libxrender1 libxext-dev cmake python3.7 python3.7-dev pkg-config \
+    python3-pip build-essential python3-dev python3-setuptools
+
+RUN rm /usr/bin/python3 && ln -s /usr/bin/python3.7 /usr/bin/python && ln -s /usr/bin/python3.7 /usr/bin/python3
+
 RUN alias python=python3 && ln -s /usr/bin/pip3 /usr/bin/pip
-RUN apt-get install -y python3-pip build-essential python3-dev python3-setuptools
 ENV PYTHONIOENCODING=utf-8
 
 WORKDIR /app
 RUN python3 -m pip install -U pip -i https://pypi.tuna.tsinghua.edu.cn/simple
-
 COPY requirements-pi.txt ./
-RUN pip install -r requirements-pi.txt --default-timeout=1000
-RUN pip install https://www.piwheels.org/simple/tensorflow/tensorflow-1.13.1-cp36-none-linux_armv7l.whl
+RUN pip install -r requirements-pi.txt --default-timeout=1000 -i https://pypi.tuna.tsinghua.edu.cn/simple
+RUN pip install tensorflow==1.13.1 -i https://www.piwheels.org/simple
 
 COPY . .
 RUN chmod +x start.sh start_worker.sh start_ps.sh start_supervisor.sh
-ENTRYPOINT ./start.sh $0 $@
+ENTRYPOINT ./start_worker.sh $0 $@
